src/components/components.css
#container{
    width: 300px;
    /* height: 100vh; */

  /* Center the container in middle on horizontal axis */
    margin: 0 auto;

  /* Add empty space above the container (20% of the view height) */
    margin-top: 10vh;
}

.about{
    margin-top: 30vh;
    text-align: center;
}

.card{
     /* Change background color */
    height: 200px;
    background-color: white;
    

    /* Add border */
    border: 1px solid #bacdd8;

    /* Add space between the border and the content */
    padding: 8px;

    border-radius: 12px;

}
.img{
    width: 80px;
    height: 200px;
    border-radius: 12px;
    object-fit: cover;
    float: right;
}

.tag {
    padding: 4px 8px;
    border: 1px solid #e5eaed;
  
    border-radius: 50px;
    font-size: 12px;
    font-weight: 600;
    color: #788697;
}

.name {
    font-size: 24px;
    font-weight: 600;
  
    margin-top: 16px;
}

p {
    font-size: 14px;
    color: #7f8c9b;
    line-height: 150%;
}
/* //button// */

button {
    padding: 0.35em;
    /* border:0.1em solid #FFFFFF; */
    /* margin: 3em; */
    border-radius:0.12em;
    box-sizing: border-box;
    text-decoration:none;
    font-family:'Roboto',sans-serif;
    font-weight:300;
    color:#9d1d1d;
    text-align:center;
    transition: all 0.2s;
}

.form-button {
    justify-content: center;
    
}

form{
    padding: 2rem 1rem;
    margin: 1rem 0;
    background-color: rgba(236, 109, 74, 0.5);
}

label {
    padding: 2rem 1rem;
}

